Partnership , fixed the width of the input boxes not fit the text in summary state , now if you type something and hit ok , state will change to sumary and the text shrinks to the width of the text

--- a/src/app/components/my-md-input/my-md-input.scss
+++ b/src/app/components/my-md-input/my-md-input.scss
@@ -18,6 +18,16 @@ $summary-state-font-weight: 300;
   line-height: 43px;
   font-size: $ddc-input-field-font-size;
 }
+.summary-text{
+  @include amp-family($summary-state-font-family);
+  @extend %#{$namespace}amp-colour-sky-blue;
+  font-weight: $summary-state-font-weight;
+  font-size: $ddc-input-field-font-size;
+  margin-left: 2px;
+}
+.invisible{
+  display: none !important;
+}
 
 $md-font-url: '/node_modules/ng2-material/dist/';
 @import '~ng2-material/dist/font.scss';
